rgbds-0.6.1/test/asm/line-continuation-whitespace.err
error: line-continuation-whitespace.asm(7):
    Label "foo" created outside of a SECTION
error: Assembly aborted (1 error)!
